--- a/static/less/colors.less
+++ b/static/less/colors.less
@@ -18,3 +18,4 @@
 
 @twitter: #55acee;
 @linkedin: #007bb6;
+@instagram: #dd2a7b;
