--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -5,23 +5,8 @@ html, body {
 	height: 100%;
 	background:@cream;
 }
-.wrapper {
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -16rem;
-	
-	@media screen and (min-width:40rem) {
-		margin: 0 auto -12rem;
-	}
-}
 footer, .push {
-	height: 16rem;
 	clear:both;
-	
-	@media screen and (min-width:40rem) {
-		height:12rem;
-	}
 }
 
 .mainContent {
